--- a/PokerFriends/package.json
+++ b/PokerFriends/package.json
@@ -1,24 +1,26 @@
 {
+  "name": "pokerfriends",
+  "version": "1.0.0",
+  "description": "",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web",
-    "eject": "expo eject"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "expo start"
   },
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "expo": "~40.0.0",
-    "expo-status-bar": "~1.0.3",
-    "global": "^4.4.0",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-native": "^0.63.2",
-    "react-native-web": "~0.13.12",
-    "firebase": "7.9.0"
-  },
-  "devDependencies": {
-    "@babel/core": "~7.9.0"
-  },
-  "private": true
+    "@react-native-firebase/app": "^10.7.0",
+    "@react-navigation/native": "^5.9.2",
+    "expo": "^40.0.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-native": "^0.63.4",
+    "react-native-web": "^0.14.13",
+    "react-native-gesture-handler": "~1.8.0",
+    "react-native-reanimated": "~1.13.0",
+    "react-native-screens": "~2.15.2",
+    "react-native-safe-area-context": "3.1.9",
+    "@react-native-community/masked-view": "0.1.10"
+  }
 }
