--- a/PokerFriends/package.json
+++ b/PokerFriends/package.json
@@ -10,17 +10,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@react-native-firebase/app": "^10.7.0",
+    "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/native": "^5.9.2",
     "expo": "^40.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-native": "^0.63.4",
-    "react-native-web": "^0.14.13",
     "react-native-gesture-handler": "~1.8.0",
     "react-native-reanimated": "~1.13.0",
-    "react-native-screens": "~2.15.2",
     "react-native-safe-area-context": "3.1.9",
-    "@react-native-community/masked-view": "0.1.10"
+    "react-native-screens": "~2.15.2",
+    "react-native-web": "^0.14.13",
+    "firebase": "7.9.0"
   }
 }
