--- a/PokerFriends/package.json
+++ b/PokerFriends/package.json
@@ -13,6 +13,7 @@
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/native": "^5.9.2",
     "expo": "^40.0.1",
+    "firebase": "7.9.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-native": "^0.63.4",
@@ -21,6 +22,7 @@
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.2",
     "react-native-web": "^0.14.13",
-    "firebase": "7.9.0"
+    "react-navigation-drawer": "^2.6.0",
+    "react-navigation-stack": "^2.10.2"
   }
 }
