--- a/PokerFriends/package.json
+++ b/PokerFriends/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/native": "^5.9.2",
+    "@react-navigation/stack": "^5.14.2",
     "expo": "^40.0.1",
+    "firebase": "7.9.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-native": "^0.63.4",
@@ -20,7 +22,6 @@
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.2",
-    "react-native-web": "^0.14.13",
-    "firebase": "7.9.0"
+    "react-native-web": "^0.14.13"
   }
 }
