--- a/PokerFriends/package.json
+++ b/PokerFriends/package.json
@@ -22,6 +22,7 @@
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.2",
-    "react-native-web": "^0.14.13"
+    "react-native-web": "^0.14.13",
+    "expo-screen-orientation": "~2.1.0"
   }
 }
