--- a/PokerFriends/package.json
+++ b/PokerFriends/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native": "^5.9.2",
     "@react-navigation/stack": "^5.14.2",
     "expo": "^40.0.1",
+    "expo-screen-orientation": "~2.1.0",
     "firebase": "7.9.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -22,7 +23,6 @@
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.2",
-    "react-native-web": "^0.14.13",
-    "expo-screen-orientation": "~2.1.0"
+    "react-native-web": "^0.14.13"
   }
 }
