--- a/PokerFriends/package.json
+++ b/PokerFriends/package.json
@@ -14,6 +14,7 @@
     "@react-native-community/slider": "^3.0.3",
     "@react-navigation/native": "^5.9.2",
     "@react-navigation/stack": "^5.14.2",
+    "again": "0.0.1",
     "expo": "^40.0.1",
     "expo-screen-orientation": "~2.1.0",
     "firebase": "7.9.0",
@@ -21,9 +22,11 @@
     "react-dom": "^17.0.1",
     "react-native": "^0.63.4",
     "react-native-gesture-handler": "~1.8.0",
+    "react-native-gifted-chat": "^0.16.3",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.2",
+    "react-native-simple-chat": "^0.1.1",
     "react-native-web": "^0.14.13",
     "react-webcam": "^5.2.3"
   }
