--- a/PokerFriends/package.json
+++ b/PokerFriends/package.json
@@ -23,6 +23,8 @@
     "react-native": "^0.63.4",
     "react-native-gesture-handler": "~1.8.0",
     "react-native-gifted-chat": "^0.16.3",
+    "react-native-image-picker": "^3.5.0",
+    "react-native-image-resizer": "^1.4.4",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.2",
