--- a/PokerFriends/package.json
+++ b/PokerFriends/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "expo start"
   },
   "author": "",
@@ -29,5 +29,8 @@
     "react-native-simple-chat": "^0.1.1",
     "react-native-web": "^0.14.13",
     "react-webcam": "^5.2.3"
+  },
+  "devDependencies": {
+    "jest": "^26.6.3"
   }
 }
