--- a/PokerFriends/package.json
+++ b/PokerFriends/package.json
@@ -15,23 +15,24 @@
     "@react-navigation/native": "^5.9.2",
     "@react-navigation/stack": "^5.14.2",
     "again": "0.0.1",
-    "expo": "^40.0.1",
-    "expo-image-picker": "~9.2.0",
-    "expo-screen-orientation": "~2.1.0",
-    "firebase": "7.9.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-native": "^0.63.4",
-    "react-native-gesture-handler": "~1.8.0",
+    "expo": "^42.0.0",
+    "expo-image-picker": "~10.2.2",
+    "expo-screen-orientation": "~3.2.1",
+    "firebase": "8.2.3",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "react-native-gesture-handler": "~1.10.2",
     "react-native-gifted-chat": "^0.16.3",
-    "react-native-reanimated": "~1.13.0",
-    "react-native-safe-area-context": "3.1.9",
-    "react-native-screens": "~2.15.2",
+    "react-native-reanimated": "~2.2.0",
+    "react-native-safe-area-context": "3.2.0",
+    "react-native-screens": "~3.4.0",
     "react-native-simple-chat": "^0.1.1",
-    "react-native-web": "^0.14.13",
+    "react-native-web": "~0.13.12",
     "react-webcam": "^5.2.3"
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.14.5",
     "jest": "^26.6.3"
   }
 }
