--- a/PokerFriends/package.json
+++ b/PokerFriends/package.json
@@ -22,12 +22,14 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "react-native-countdown-circle-timer": "^2.5.4",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-gifted-chat": "^0.16.3",
     "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
     "react-native-simple-chat": "^0.1.1",
+    "react-native-svg": "^12.1.1",
     "react-native-web": "~0.13.12",
     "react-webcam": "^5.2.3"
   },
