--- a/PokerFriends/package.json
+++ b/PokerFriends/package.json
@@ -18,6 +18,7 @@
     "expo": "^42.0.0",
     "expo-image-picker": "~10.2.2",
     "expo-screen-orientation": "~3.2.1",
+    "expo-status-bar": "~1.0.4",
     "firebase": "8.2.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
