--- a/PokerFriends/app.json
+++ b/PokerFriends/app.json
@@ -1,14 +1,14 @@
 {
   "expo": {
-    "name": "PokerFriends",
-    "slug": "PokerFriends",
+    "name": "Poker-Friends",
+    "slug": "poker-friends",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#2ecc71"
     },
     "updates": {
       "fallbackToCacheTimeout": 0
@@ -20,14 +20,15 @@
       "supportsTablet": true
     },
     "android": {
-      
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#FFFFFF"
+        "backgroundColor": "#2ecc71"
       }
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "description": "Poker mobile game for both iPhone and Android.",
+    "githubUrl": "https://github.com/HarpreetGh/Poker-Friends"
   }
 }
