--- a/PokerFriends/app.json
+++ b/PokerFriends/app.json
@@ -23,7 +23,8 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#2ecc71"
-      }
+      },
+      "package": "com.harpreetgh.pokerfriends"
     },
     "web": {
       "favicon": "./assets/favicon.png"
